--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.46.5",
+    "axios": "^1.1.3",
+    "element-plus": "^2.2.21",
     "pinia": "^2.0.24",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
@@ -18,6 +20,8 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
   }
