--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,7 +18,9 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.31.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "eslint": "^8.27.0",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.4",
