--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.24",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.0",
     "@iconify/json": "^2.1.142",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.2.0",
@@ -30,7 +32,6 @@
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.4",
-    "unplugin-icons": "^0.14.14",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
