--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "element-plus": "^2.2.21",
     "js-cookie": "^3.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.24",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
@@ -25,6 +26,7 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.9",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.27.0",
     "less": "^4.1.3",
