--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.2.21",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
+    "path": "^0.12.7",
     "pinia": "^2.0.24",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
