--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
+    "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.24",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
