--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "element-plus": "^2.2.21",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "path-to-regexp": "^6.2.1",
@@ -27,6 +28,7 @@
     "@iconify/json": "^2.1.142",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/js-cookie": "^3.0.2",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
