--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.0.9"
   }
 }
